fix(UI): align heading in project, report, task, time entry screen

--- a/resources/assets/style/sass/style.scss
+++ b/resources/assets/style/sass/style.scss
@@ -556,3 +556,8 @@ table.dataTable {
     border-bottom-right-radius: 0 !important;
 }
 
+.page__heading {
+    margin-bottom: 5px;
+    margin-top: auto;
+}
+
